Renamed packages to comply with RFC 940 and avoid confusions.

--- a/exercise/d-control-flow-strings/Cargo.toml
+++ b/exercise/d-control-flow-strings/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "d-control-flow-strings"
+name = "d_control_flow_strings"
 version = "0.1.0"
 authors = ["Nathan Stocks <nathan.stocks@gmail.com>"]
 edition = "2018"
