--- a/exercise/g-collections-enums/Cargo.toml
+++ b/exercise/g-collections-enums/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "g-collections-enums"
+name = "g_collections_enums"
 version = "0.1.0"
 authors = ["Nathan Stocks <nathan.stocks@gmail.com>"]
 edition = "2018"
