--- a/exercise/b-functions/Cargo.toml
+++ b/exercise/b-functions/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "b-functions"
+name = "b_functions"
 version = "0.1.0"
 authors = ["Nathan Stocks <nathan.stocks@gmail.com>"]
 edition = "2018"
